run-ahp-2
Waf: Entering directory `/home/lucas/git/ns/build'
[1557/1847] Compiling src/lte/model/ahp-handover-algorithm.cc
../src/lte/model/ahp-handover-algorithm.cc: In member function ‘void ns3::AhpHandoverAlgorithm::EvaluateHandover(uint16_t, uint8_t, uint16_t, uint16_t)’:
../src/lte/model/ahp-handover-algorithm.cc:309:11: error: ‘else’ without a previous ‘if’
           else
           ^~~~

Waf: Leaving directory `/home/lucas/git/ns/build'
Build failed
 -> task in 'ns3-lte' failed (exit status 1): 
	{task 140151061390504: cxx ahp-handover-algorithm.cc -> ahp-handover-algorithm.cc.1.o}
['/usr/bin/g++', '-O0', '-ggdb', '-g3', '-std=c++11', '-Wno-error=deprecated-declarations', '-fstrict-aliasing', '-Wstrict-aliasing', '-fPIC', '-pthread', '-pthread', '-I.', '-I..', '-I/usr/include/gtk-2.0', '-I/usr/lib/gtk-2.0/include', '-I/usr/include/pango-1.0', '-I/usr/include/atk-1.0', '-I/usr/include/cairo', '-I/usr/include/pixman-1', '-I/usr/include/gdk-pixbuf-2.0', '-I/usr/include/freetype2', '-I/usr/include/libpng16', '-I/usr/include/harfbuzz', '-I/usr/include/glib-2.0', '-I/usr/lib/glib-2.0/include', '-I/usr/include/libxml2', '-DNS3_BUILD_PROFILE_DEBUG', '-DNS3_ASSERT_ENABLE', '-DNS3_LOG_ENABLE', '-DHAVE_SYS_IOCTL_H=1', '-DHAVE_IF_NETS_H=1', '-DHAVE_NET_ETHERNET_H=1', '-DHAVE_PACKET_H=1', '-DHAVE_IF_TUN_H=1', '-DHAVE_=1', '-DHAVE_SQLITE3=1', '-DHAVE_GTK2=1', '-DHAVE_LIBXML2=1', '../src/lte/model/ahp-handover-algorithm.cc', '-c', '-o', '/home/lucas/git/ns/build/src/lte/model/ahp-handover-algorithm.cc.1.o']
